--- a/3x3-tut-choose.html
+++ b/3x3-tut-choose.html
@@ -9,7 +9,7 @@
             <header class = "background-header">
                     <div></div>
                         <div class = "logo">
-                            <h1 class = "header-text" style = "margin-right: 3.5vw">CUBE</h1>
+                            <h1 class = "header-text" style = "margin-right: 3.5vw;">CUBE</h1>
                                 <div class = "logo-center">
                                     <h1 class = "header-text" style = "color: #111222">-</h1>
                                     <div class = "icon">
@@ -31,36 +31,32 @@
             </header>
                 <nav>
                     <div class = "content">
-                        <div class = "tut-home" onclick = "location.href='index.html'">
+                        <div class = "tut-home" onclick = "location.href='tutorial-menu.html'">
                             <h1 class = "option-text">MENU</h1>
                         </div>
-                        <div class = "tut-option">
-                                <h1 class = "tut-description" ctyle = "margin-top: 10px;">NOTACJE</h1>
-                        </div>
-                        <div class = "tut-option" onclick = "location.href = '3x3-tut-choose.html'">
+                        <div class = "tut-option" onclick = "location.href='lbl.html'">
                             <div class = "tut-img-container">
                                 <img src = "img/tutorials/3x3icon.png" class = "tut-img">
                             </div>
                             <div>
-                                <h1 class = "tut-description">3 x 3 x 3</h1>
-                                <h1 class = "tut-count">3 PORADNIKI</h1>
+                                <h1 class = "tut-description">LBL</h1>
                             </div>
                         </div>
                         <div class = "tut-option-build">
                             <div class = "tut-img-container">
-                                <img src = "img/tutorials/2x2icon.png" class = "tut-img">
+                                <img src = "img/tutorials/3x3icon.png" class = "tut-img">
                             </div>
                             <div>
-                                <h1 class = "tut-description">2 x 2 x 2</h1>
+                                <h1 class = "tut-description" style = "font-size: min(100px, 3.5vw)">FRIDRICH</h1>
                                 <h1 class = "tut-count">W BUDOWIE</h1>
                             </div>
                         </div>
                         <div class = "tut-option-build">
                             <div class = "tut-img-container">
-                                <img src = "img/tutorials/4x4icon.png" class = "tut-img">
+                                <img src = "img/tutorials/3x3icon.png" class = "tut-img">
                             </div>
                             <div>
-                                <h1 class = "tut-description">4 x 4 x 4</h1>
+                                <h1 class = "tut-description" style = "font-size: min(100px, 3vw)">BLINDFOLDED</h1>
                                 <h1 class = "tut-count">W BUDOWIE</h1>
                             </div>
                         </div>
