--- a/index.html
+++ b/index.html
@@ -7,45 +7,53 @@
     <body>
         <div class = "container">
             <header class = "background-header">
-                <!-- <img class = "background" src = "img/cube-back.png"> -->
-                    <div></div>
-                        <div class = "logo">
-                            <h1 class = "header-text">HALO</h1>
-                                <!-- <div style = "background-color: chartreuse;"></div> -->
-                                <div class = "logo-center">
-                                    <h1 class = "header-text">-</h1>
-                                    <div class = "icon">
-                                        <div class = "cube-element" style = "background-color: white;"></div>
-                                        <div class = "cube-element" style = "background-color: orange;"></div>
-                                        <div class = "cube-element" style = "background-color: yellow;"></div>
-                                        <div class = "cube-element" style = "background-color: red;"></div>
-                                        <div class = "cube-element" style = "background-color: green;"></div>
-                                        <div class = "cube-element" style = "background-color: white;"></div>
-                                        <div class = "cube-element" style = "background-color: white;"></div>
-                                        <div class = "cube-element" style = "background-color: red;"></div>
-                                        <div class = "cube-element" style = "background-color: blue;"></div>
+                <div></div>
+                <div class = "logo">
+                            <h1 class = "header-text" style = "margin-right: 3.5vw">CUBE</h1>
+                            <div class = "logo-center">
+                                <h1 class = "header-text" style = "color: #111222">-</h1>
+                                    <div class = "icon" id = "icon" onclick = "scramble()">
+                                        <div class = "cube-element" style = "background-color: #ffffff;"></div>
+                                        <div class = "cube-element" style = "background-color: #c08768;"></div>
+                                        <div class = "cube-element" style = "background-color: #dac17a;"></div>
+                                        <div class = "cube-element" style = "background-color: #96302f;"></div>
+                                        <div class = "cube-element" style = "background-color: #548a42;"></div>
+                                        <div class = "cube-element" style = "background-color: #ffffff;"></div>
+                                        <div class = "cube-element" style = "background-color: #ffffff;"></div>
+                                        <div class = "cube-element" style = "background-color: #96302f;"></div>
+                                        <div class = "cube-element" style = "background-color: #3e6d9d;"></div>
                                     </div>
-                                    <h1 class = "header-text">-</h1>
+                                    <h1 class = "header-text" style = "color: #111222">-</h1>
                                 </div>
-                                <h1 class = "header-text">HALO</h1>
-                        </div>
+                                <h1 class = "header-text">CROSS</h1>
+                            </div>
                     <div></div>
             </header>
-                <nav>
-                    <div class = "menu">
-                        <div class = "option">
-                            <h1 class = "option-text">PORADNIKI</h1>
+            <nav>
+                <div class = "menu">
+                    <div class = "option">
+                        <h1 class = "option-text">TIMER</h1 >
                             <div class = "option-img-container">
-                                <img src = "img/test-cat.png" class = "option-img">
+                                <img src = "img/timer.png" class = "option-img">
                             </div>
                         </div>
-                        <div class = "option" onclick="location.href='tutorial-menu.html'"></div>
-                        <div class = "option"></div>
+                        <div class = "option" onclick="location.href='tutorial-menu.html'">
+                            <h1 class = "option-text">PORADNIKI</h1>
+                            <div class = "option-img-container">
+                                <img src = "img/poradniki.png" class = "option-img">
+                            </div>
+                        </div>
+                        <div class = "option" onclick="location.href='records.html'">
+                            <h1 class = "option-text">REKORDY</h1>
+                            <div class = "option-img-container">
+                                <img src = "img/rekordy2.png" class = "option-img">
+                            </div>
+                        </div>
                     </div>
                     
                 </nav>
                 <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
-        </div>
-        
-    </body>
-</html>
+            </div>
+            <script src = "scramble.js"></script>
+        </body>
+        </html>
