--- a/lbl.html
+++ b/lbl.html
@@ -9,7 +9,7 @@
             <header class = "background-header">
                     <div></div>
                         <div class = "logo">
-                            <h1 class = "header-text" style = "margin-right: 3.5vw">CUBE</h1>
+                            <h1 class = "header-text" style = "margin-right: 3.5vw;">CUBE</h1>
                                 <div class = "logo-center">
                                     <h1 class = "header-text" style = "color: #111222">-</h1>
                                     <div class = "icon">
@@ -29,43 +29,39 @@
                         </div>
                     <div></div>
             </header>
-                <nav>
+                <nav class = "content-box">
+                    <div></div>
                     <div class = "content">
-                        <div class = "tut-home" onclick = "location.href='index.html'">
-                            <h1 class = "option-text">MENU</h1>
+                        <div class = "tut-home" onclick = "location.href='3x3-tut-choose.html'">
+                            <p class = "option-text">MENU</p>
                         </div>
-                        <div class = "tut-option">
-                                <h1 class = "tut-description" ctyle = "margin-top: 10px;">NOTACJE</h1>
+                        <div class = "content-element">
+                            <h1 class = "content-header">WSTĘP</h1>
+                            <p class = "content-text">
+                                Tutaj nauczysz się układać kostkę 3x3x3 krok po kroku najprostszą metodą - LBL (Layer By Layer).
+                                Poradnik układania kostki Rubika jest podzielony na kilka etapów,
+                                w których otrzymasz pomocne informacje i algorytmy.</p>
                         </div>
-                        <div class = "tut-option" onclick = "location.href = '3x3-tut-choose.html'">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/3x3icon.png" class = "tut-img">
-                            </div>
-                            <div>
-                                <h1 class = "tut-description">3 x 3 x 3</h1>
-                                <h1 class = "tut-count">3 PORADNIKI</h1>
-                            </div>
-                        </div>
-                        <div class = "tut-option-build">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/2x2icon.png" class = "tut-img">
-                            </div>
-                            <div>
-                                <h1 class = "tut-description">2 x 2 x 2</h1>
-                                <h1 class = "tut-count">W BUDOWIE</h1>
-                            </div>
-                        </div>
-                        <div class = "tut-option-build">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/4x4icon.png" class = "tut-img">
-                            </div>
-                            <div>
-                                <h1 class = "tut-description">4 x 4 x 4</h1>
-                                <h1 class = "tut-count">W BUDOWIE</h1>
+                        <div class = "content-element">
+                            <h1 class = "content-header">KROK 1. BIAŁY KRZYŻ</h1>
+                            <p class = "content-text">
+                                Najlepiej, gdy spróbujesz samodzielnie ułożyć biały krzyż. 
+                                W razie potrzeby poniżej znajdziesz zdjęcie, przedstawiające jak wygląda prawidłowo 
+                                ułożony biały krzyż oraz 2 warianty jak można go ułożyć.
+                            </p>
+                            <div class = "pic-disc">
+                                <div class = "img-cube-container">
+                                    <img src = "img/tutorials/3x3-lbl/full-cross.png" class = "img-cube">
+                                </div>
+                                <p class = "disc-text">
+                                    Tak wygląda prawidłowo ułożony biały krzyż w kostce 3x3x3.
+                                    Musisz zwrócić uwagę na to, aby krawędzie łączyły się z centrami na środkowej warstwie,
+                                    a kolory krawędzi na całym krzyżu łączyły się tak jak na zdjęciu.
+                                </p>
                             </div>
                         </div>
                     </div>
-                    
+                    <div></div>
                 </nav>
                 <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
         </div>
