--- a/records.html
+++ b/records.html
@@ -9,7 +9,7 @@
             <header class = "background-header">
                     <div></div>
                         <div class = "logo">
-                            <h1 class = "header-text" style = "margin-right: 3.5vw">CUBE</h1>
+                            <h1 class = "header-text" style = "margin-right: 3.5vw;">CUBE</h1>
                                 <div class = "logo-center">
                                     <h1 class = "header-text" style = "color: #111222">-</h1>
                                     <div class = "icon">
@@ -30,42 +30,27 @@
                     <div></div>
             </header>
                 <nav>
-                    <div class = "content">
-                        <div class = "tut-home" onclick = "location.href='index.html'">
-                            <h1 class = "option-text">MENU</h1>
-                        </div>
-                        <div class = "tut-option">
-                                <h1 class = "tut-description" ctyle = "margin-top: 10px;">NOTACJE</h1>
-                        </div>
-                        <div class = "tut-option" onclick = "location.href = '3x3-tut-choose.html'">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/3x3icon.png" class = "tut-img">
+                    <div class = "content-box">
+                        <div></div>
+                        <div class = "content">
+                            <div class = "tut-home" onclick = "location.href='index.html'">
+                                <p class = "option-text">MENU</p>
                             </div>
-                            <div>
-                                <h1 class = "tut-description">3 x 3 x 3</h1>
-                                <h1 class = "tut-count">3 PORADNIKI</h1>
+                            <div class = "content-element">
+                                <p class = "content-header">
+                                    3x3x3 - 3.13s / Max Park
+                                </p>
+                                <iframe class = "video" src = "https://www.youtube.com/embed/gh8HX4itF_w"></iframe>
                             </div>
-                        </div>
-                        <div class = "tut-option-build">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/2x2icon.png" class = "tut-img">
-                            </div>
-                            <div>
-                                <h1 class = "tut-description">2 x 2 x 2</h1>
-                                <h1 class = "tut-count">W BUDOWIE</h1>
+                            <div class = "content-element">
+                                <p class = "content-header">
+                                    4x4x4 - 16.79s / Max Park
+                                </p>
+                                <iframe class = "video" src = "https://www.youtube.com/embed/d3L26rJN_RE"></iframe>
                             </div>
                         </div>
-                        <div class = "tut-option-build">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/4x4icon.png" class = "tut-img">
-                            </div>
-                            <div>
-                                <h1 class = "tut-description">4 x 4 x 4</h1>
-                                <h1 class = "tut-count">W BUDOWIE</h1>
-                            </div>
-                        </div>
+                        <div></div>
                     </div>
-                    
                 </nav>
                 <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
         </div>
