--- a/timer.html
+++ b/timer.html
@@ -30,42 +30,25 @@
                     <div></div>
             </header>
                 <nav>
-                    <div class = "content">
-                        <div class = "tut-home" onclick = "location.href='home.html'">
-                            <h1 class = "option-text">MENU</h1>
-                        </div>
-                        <div class = "tut-option" onclick = "location.href = '3x3-tut-choose.html'">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/3x3icon.png" class = "tut-img">
+                    <div class = "content-box">
+                        <div></div>
+                        <div class = "content-timer">
+                            <div class = "tut-home" onclick = "location.href='home.html'">
+                                <h1 class = "option-text">MENU</h1>
                             </div>
-                            <div>
-                                <h1 class = "tut-description">3 x 3 x 3</h1>
-                                <h1 class = "tut-count">3 PORADNIKI</h1>
-                            </div>
-                        </div>
-                        <div class = "tut-option-build">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/2x2icon.png" class = "tut-img">
-                            </div>
-                            <div>
-                                <h1 class = "tut-description">2 x 2 x 2</h1>
-                                <h1 class = "tut-count">W BUDOWIE</h1>
+                            <div class = "timer">
+                                <h1 class = "timer-text">
+                                    00:00:00
+                                </h1>
+                                <!-- <button id="start-timer">Start</button> -->
                             </div>
                         </div>
-                        <div class = "tut-option-build">
-                            <div class = "tut-img-container">
-                                <img src = "img/tutorials/4x4icon.png" class = "tut-img">
-                            </div>
-                            <div>
-                                <h1 class = "tut-description">4 x 4 x 4</h1>
-                                <h1 class = "tut-count">W BUDOWIE</h1>
-                            </div>
-                        </div>
+                        <div></div>
                     </div>
-                    
                 </nav>
                 <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
         </div>
+        <script src = "timer.js"></script>
         <script src = "scramble.js"></script>
     </body>
 </html>
