--- a/3x3-tut-choose.html
+++ b/3x3-tut-choose.html
@@ -12,7 +12,7 @@
                             <h1 class = "header-text" style = "margin-right: 3.5vw;">CUBE</h1>
                                 <div class = "logo-center">
                                     <h1 class = "header-text" style = "color: #111222">-</h1>
-                                    <div class = "icon">
+                                    <div class = "icon" onclick = "scramble()">
                                         <div class = "cube-element" style = "background-color: #ffffff;"></div>
                                         <div class = "cube-element" style = "background-color: #c08768;"></div>
                                         <div class = "cube-element" style = "background-color: #dac17a;"></div>
@@ -65,6 +65,6 @@
                 </nav>
                 <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
         </div>
-        
+        <script src = "scramble.js"></script>
     </body>
 </html>
