--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                             <h1 class = "header-text" style = "margin-right: 3.5vw">CUBE</h1>
                             <div class = "logo-center">
                                 <h1 class = "header-text" style = "color: #111222">-</h1>
-                                    <div class = "icon" id = "icon" onclick = "scramble()">
+                                    <div class = "icon" onclick = "scramble()">
                                         <div class = "cube-element" style = "background-color: #ffffff;"></div>
                                         <div class = "cube-element" style = "background-color: #c08768;"></div>
                                         <div class = "cube-element" style = "background-color: #dac17a;"></div>
@@ -31,7 +31,7 @@
             </header>
             <nav>
                 <div class = "menu">
-                    <div class = "option">
+                    <div class = "option" onclick = "location.href='timer.html'">
                         <h1 class = "option-text">TIMER</h1 >
                             <div class = "option-img-container">
                                 <img src = "img/timer.png" class = "option-img">
