--- a/records.html
+++ b/records.html
@@ -12,7 +12,7 @@
                             <h1 class = "header-text" style = "margin-right: 3.5vw;">CUBE</h1>
                                 <div class = "logo-center">
                                     <h1 class = "header-text" style = "color: #111222">-</h1>
-                                    <div class = "icon">
+                                    <div class = "icon" onclick = "scramble()">
                                         <div class = "cube-element" style = "background-color: #ffffff;"></div>
                                         <div class = "cube-element" style = "background-color: #c08768;"></div>
                                         <div class = "cube-element" style = "background-color: #dac17a;"></div>
@@ -33,7 +33,7 @@
                     <div class = "content-box">
                         <div></div>
                         <div class = "content">
-                            <div class = "tut-home" onclick = "location.href='index.html'">
+                            <div class = "tut-home" onclick = "location.href='home.html'">
                                 <p class = "option-text">MENU</p>
                             </div>
                             <div class = "content-element">
@@ -54,6 +54,6 @@
                 </nav>
                 <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
         </div>
-        
+        <script src = "scramble.js"></script>
     </body>
 </html>
