--- a/tutorial-menu.html
+++ b/tutorial-menu.html
@@ -31,7 +31,7 @@
             </header>
                 <nav>
                     <div class = "content">
-                        <div class = "tut-home" onclick = "location.href='home.html'">
+                        <div class = "tut-home" onclick = "location.href='index.html'">
                             <h1 class = "option-text">MENU</h1>
                         </div>
                         <div class = "tut-option" onclick = "location.href = '3x3-tut-choose.html'">
