--- a/records.html
+++ b/records.html
@@ -33,7 +33,7 @@
                     <div class = "content-box">
                         <div></div>
                         <div class = "content">
-                            <div class = "tut-home" onclick = "location.href='home.html'">
+                            <div class = "tut-home" onclick = "location.href='index.html'">
                                 <p class = "option-text">MENU</p>
                             </div>
                             <div class = "content-element">
