--- a/timer.html
+++ b/timer.html
@@ -33,7 +33,7 @@
                     <div class = "content-box">
                         <div></div>
                         <div class = "content-timer">
-                            <div class = "tut-home" onclick = "location.href='home.html'">
+                            <div class = "tut-home" onclick = "location.href='index.html'">
                                 <h1 class = "option-text">MENU</h1>
                             </div>
                             <div class = "timer">
