--- a/lbl.html
+++ b/lbl.html
@@ -337,7 +337,7 @@
                                         <img src = "img/tutorials/3x3-lbl/solved.png" class = "img-cube">
                                     </div>
                                     <p class = "disc-text">
-                                        Udało Ci się ułożyć kostkę rubika! Możesz być z siebie dumny! :)
+                                        Udało Ci się ułożyć kostkę rubika! Możesz być z siebie dumny! :D
                                     </p>
                                 </div>
                             </div>
