--- a/lbl.html
+++ b/lbl.html
@@ -209,6 +209,12 @@
                                 <div class = "img-alg-container">
                                     <img src = "img/tutorials/3x3-lbl/alg6color.PNG" class = "img-alg">
                                 </div>
+                                <div class = "img-alg-container">
+                                    <img src = "img/tutorials/3x3-lbl/alg6color.PNG" class = "img-alg">
+                                </div>
+                                <div class = "img-alg-container">
+                                    <img src = "img/tutorials/3x3-lbl/alg6color.PNG" class = "img-alg">
+                                </div>
                             </div>
                         </div>
                         <div class = "content-element">
