--- a/records.html
+++ b/records.html
@@ -33,18 +33,36 @@
                     <div class = "content-box">
                         <div></div>
                         <div class = "content">
-                            <div class = "tut-home" onclick = "location.href='index.html'">
+                            <div class = "tut-home" onclick = "location.href='home.html'">
                                 <p class = "option-text">MENU</p>
                             </div>
                             <div class = "content-element">
                                 <p class = "content-header">
-                                    3x3x3 - 3.13s / Max Park
+                                    3x3x3 - 3.13s / Max Park USA
                                 </p>
                                 <iframe class = "video" src = "https://www.youtube.com/embed/gh8HX4itF_w"></iframe>
                             </div>
                             <div class = "content-element">
                                 <p class = "content-header">
-                                    4x4x4 - 16.79s / Max Park
+                                    3x3x3 ONE-HANDED - 6.20s / Max Park USA
+                                </p>
+                                <iframe class = "video" src = "https://www.youtube.com/embed/8LvIIg2znOE"></iframe>
+                            </div>
+                            <div class = "content-element">
+                                <p class = "content-header">
+                                    3x3x3 BLINDFOLDED - 12.10s / Charlie Eggins AUSTRALIA
+                                </p>
+                                <iframe class = "video" src = "https://www.youtube.com/embed/Hwv7sK8U6i4"></iframe>
+                            </div>
+                            <div class = "content-element">
+                                <p class = "content-header">
+                                    2x2x2 - 0.43s / Teodor Zajer POLSKA
+                                </p>
+                                <iframe class = "video" src = "https://www.youtube.com/embed/d3L26rJN_REasd"></iframe>
+                            </div>
+                            <div class = "content-element">
+                                <p class = "content-header">
+                                    4x4x4 - 16.79s / Max Park USA
                                 </p>
                                 <iframe class = "video" src = "https://www.youtube.com/embed/d3L26rJN_RE"></iframe>
                             </div>
