--- a/3x3-tut-choose.html
+++ b/3x3-tut-choose.html
@@ -63,7 +63,7 @@
                     </div>
                     
                 </nav>
-                <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
+                <footer class = "footer-text">&copy; Created by Krystian Sienkewicz of AGH University of Science and Technology</footer>
         </div>
         <script src = "scramble.js"></script>
     </body>
