--- a/lbl.html
+++ b/lbl.html
@@ -345,7 +345,7 @@
                     </div>
                     <div></div>
                 </nav>
-                <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
+                <footer class = "footer-text">&copy; Created by Krystian Sienkewicz of AGH University of Science and Technology</footer>
         </div>
         <script src = "scramble.js"></script>
     </body>
