--- a/timer.html
+++ b/timer.html
@@ -45,7 +45,7 @@
                         <div></div>
                     </div>
                 </nav>
-                <footer class = "footer-text">&copy; Created by Ja of AGH University of Science and Technology</footer>
+                <footer class = "footer-text">&copy; Created by Krystian Sienkiewicz of AGH University of Science and Technology</footer>
         </div>
         <script src = "timer.js"></script>
         <script src = "scramble.js"></script>
