--- a/lbl.html
+++ b/lbl.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>stronka in progress...</title>
+        <title>CUBE CROSS</title>
         <link rel = "stylesheet" href = "styles.css">
+        <!-- <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
     </head>
     <body>
         <div class = "container">
