--- a/tutorial-menu.html
+++ b/tutorial-menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>stronka in progress...</title>
+        <title>CUBE CROSS</title>
         <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
